app/eventyay/static/pretixcontrol/scss/_forms.scss
/* ... */
.form-horizontal [data-formset] .rrule-form .form-group {
  margin: 0;
  width: auto;
}
.rrule-form {
  .form-control {
    display: inline;
  }
  input[type=number] {
    width: 100px;
  }
  .repeat-yearly, .repeat-monthly, .repeat-weekly {
    line-height: 35px;
    padding: 0 0 15px 0;
    margin: 10px 0;
    border-top: 1px solid $panel-default-border;
    border-bottom: 1px solid $panel-default-border;

    input[type="radio"], input[type="checkbox"] {
      top: 2px;
    }
  }
  .repeat-weekly > div.form-group {
    display: block;
    line-height: 1;
    padding-top: 5px;

    & > div {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      align-content: space-between;
      div.checkbox {
        flex-grow: 1;
      }
    }
  }
  .repeat-until {
    line-height: 40px;
  }
}
#time-formset {
  input {
    display: block;
    width: 100%;
  }
  .form-group {
    margin: 0;
  }
  .row {
    margin-bottom: 15px;
  }
}
.ticketoutput-panel .panel-heading {
  .checkbox {
    padding: 0;
    display: inline-block;
    input[type=checkbox] {
      margin-top: 0;
      margin-right: 5px;
      margin-left: 0px;
      position: relative;
      top: 1px;
    }
  }
}
.form-horizontal .big-radio {
  border: 1px solid #ccc;
  border-bottom: 0;
  padding: 0;
  label {
    padding: 15px 15px 15px 30px;
  }

  .help-block {
    margin-bottom: 0;
  }
  &:first-child {
    border-top-left-radius: $border-radius-base;
    border-top-right-radius: $border-radius-base;
  }
  &:last-child {
    border-bottom-left-radius: $border-radius-base;
    border-bottom-right-radius: $border-radius-base;
    border-bottom: 1px solid #ccc;
  }
}
.accordion-radio {
  display: block;
  margin: 0;
}
.panel-default>.accordion-radio>.panel-heading {
  color: #333;
  background-color: #f5f5f5;
  padding: 12px 15px;

  input[type=checkbox] {
    margin-top: 0;
    margin-right: 5px;
    position: relative;
    top: 2px;
  }
}
.maildesignpreview {
  label {
    display: block;
  }
  img {
    display: block;
    width: 90%;
    margin: 10px auto;
    height: auto;
    box-shadow: 0 1px 3px 0 #aaa;
  }
}

.form-order-change, .form-refund-choose {
  .row {
    padding: 5px 0;
  }
}
.form-refund-choose {
  .payment-details {
    max-width: 200px;
  }
  .refund-amount {
    width: 250px;
    input.form-control {
      width: 100px;
    }
  }
}

@media(max-width: $screen-xs-max) {
  .nameparts-form-group {
    display: block;
    input:not(:first-child), select:not(:first-child) {
      border-top-right-radius: 0;
      border-top-left-radius: 0;
    }
    input:not(:last-child), select:not(:last-child) {
      border-bottom-right-radius: 0;
      border-bottom-left-radius: 0;
    }
  }
}
@media(min-width: $screen-sm-min) {
  .nameparts-form-group {
    display: flex;
    flex-direction: row;
    input, select {
      min-width: 5em;
      flex-basis: 0;
      flex-grow: 1;
    }
    input:not(:first-child), select:not(:first-child) {
      border-bottom-left-radius: 0;
      border-top-left-radius: 0;
    }
    input:not(:last-child), select:not(:last-child) {
      border-bottom-right-radius: 0;
      border-top-right-radius: 0;
    }
    [data-size="1"] {
      flex-grow: 1;
      flex-shrink: 4;
    }
    [data-size="2"] {
      flex-grow: 2;
      flex-shrink: 3;
    }
    [data-size="3"] {
      flex-grow: 3;
      flex-shrink: 2;
    }
    [data-size="4"] {
      flex-grow: 4;
      flex-shrink: 1;
    }
  }
}

.help-inline {
  color: lighten($text-color, 25%); // lighten the text some for contrast
}

// Filter actions container - works for both panel and non-panel layouts
.filter-form .filter-actions {
  display: flex;
  gap: 20px;
  align-items: center;
  margin-bottom: 0;
  
  // Override Bootstrap grid constraints when inside filter-actions
  &.col-md-2,
  &.col-sm-6,
  &.col-xs-12 {
    flex: 1 1 auto;
    max-width: none;
    width: auto;
  }
}

#rules-editor {
  .checkin-rule {
    border-left: 4px solid $brand-primary;
    background: rgba(0, 0, 0, 0.05);
    padding: 5px 15px 5px 15px;
    margin: 5px 0;
    position: relative;
  }

  .checkin-rule-and {
    border-left: 4px solid $brand-danger;
  }
  .checkin-rule-or {
    border-left: 4px solid $brand-success;
  }
}

.tax-rules-formset {
  margin-left: -15px;
  margin-right: -15px;
}
.tax-rule-line {
  padding-top: 5px;
  margin: 0;
  & > div {
    padding-top: 5px;
    padding-bottom: 5px;
  }
}
.tax-rule-lines .tax-rule-line {
  border-bottom: 1px solid $input-border;
  padding-bottom: 5px;
}


.batch-select-label {
  display: block;
  width: 100%;
  height: 1.5em;
  cursor: pointer;
}

.bulk-edit-field-group {
  .field-toggle {
    font-weight: normal;
    display: inline-block;
    background: $gray-lighter;
    padding: 2px 8px 4px;
    border-top-left-radius: $border-radius-base;
    border-top-right-radius: $border-radius-base;
    margin-bottom: 0;
    input {
      position: relative;
      top: 2px;
    }
  }
  .field-content {
    border: 2px solid $gray-lighter;
    padding: 15px;
    opacity: 0.5;
    .datepickerfield::placeholder, .timepickerfield::placeholder {
      opacity: 0;
    }
    &.enabled {
      opacity: 1;
      .datepickerfield::placeholder, .timepickerfield::placeholder {
        opacity: 1;
      }
    }
  }
}

// Responsive styles for filter actions
@media (max-width: 768px) {
  .filter-form .filter-actions {
    flex-direction: column;
    gap: 10px;
  }
}

